--- a/对象的使用.html
+++ b/对象的使用.html
@@ -23,7 +23,7 @@
     // //1.查 对象名.属性名  两种方法
     console.log(pink.uname)//pink老师 
     console.log(pink['goods-name'])//对象名['属性名'](属性名是字符串)
-    console.log(pink.goods - name)
+    console.log(pink.goods - name)//NaN
     //2.改  把性别女改为男
     pink.gender = '男'
     console.log(pink.gender)
