--- a/随机点名.html
+++ b/随机点名.html
@@ -5,32 +5,91 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    h2 {
+      text-align: center;
+    }
+
+    .box {
+      width: 600px;
+      margin: 50px auto;
+      display: flex;
+      font-size: 25px;
+      line-height: 40px;
+    }
+
+    .qs {
+
+      width: 450px;
+      height: 40px;
+      color: red;
+
+    }
+
+    .btns {
+      text-align: center;
+    }
+
+    .btns button {
+      width: 120px;
+      height: 35px;
+      margin: 0 50px;
+    }
+  </style>
 </head>
 
 <body>
-  <!DOCTYPE html>
-  <html lang="en">
+  <h2>随机点名</h2>
+  <div class="box">
+    <span>名字是：</span>
+    <div class="qs">这里显示姓名</div>
+  </div>
+  <div class="btns">
+    <button class="start">开始</button>
+    <button class="end">结束</button>
+  </div>
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-  </head>
+  <script>
+    // 数据数组
+    const arr = ['马超', '黄忠', '赵云', '关羽', '张飞']
+    // 定时器的全局变量
+    let timerId = 0
+    // 随机号要全局变量
+    let random = 0
+    // 业务1.开始按钮模块
+    const qs = document.querySelector('.qs')
+    // 1.1 获取开始按钮对象
+    const start = document.querySelector('.start')
+    // 1.2 添加点击事件
+    start.addEventListener('click', function () {
+      timerId = setInterval(function () {
+        // 随机数
+        random = parseInt(Math.random() * arr.length)
+        // console.log(arr[random])
+        qs.innerHTML = arr[random]
+      }, 35)
+      // 如果数组里面只有一个值了，还需要抽取吗？  不需要  让两个按钮禁用就可以
+      if (arr.length === 1) {
+        // start.disabled = true
+        // end.disabled = true
+        start.disabled = end.disabled = true
+      }
+    })
 
-  <body>
-    <script>
-      //随机点名，抽到的数就删掉，避免重复抽取
-      let arr = ['一', '抹', '亮', '色']
-      let random = Math.floor(Math.random() * arr.length)
-      document.write(arr[random])   //随机值
-
-      //splice(起始位置(下标)，删除几个元素)
+    // 2. 关闭按钮模块
+    const end = document.querySelector('.end')
+    end.addEventListener('click', function () {
+      clearInterval(timerId)
+      // 结束了，可以删除掉当前抽取的那个数组元素
       arr.splice(random, 1)
-      console.log(arr)   //控制台打印数组中剩下的值
-    </script>
-  </body>
-
-  </html>
+      console.log(arr)
+    })
+  </script>
 </body>
 
 </html>
